Migration to Angular 15 (#133)
* modified dependencies

* adapted the pie, donut and bar charts

* added charts options

* added multi bar chart

* added color

* added multi bar and removed unused dependencies

* feat: updated workflows (#127)

* removed unused imports

* updated package

* updated to angular 9

* migrated to material 9

* updated flex-layout to 9

* updated tslib to 2.0.0

* update ontimize-web-ngx to 9

* added index files and removed unused dependencies

* updated tslib to 2.0.0

* updated to angular10

* updated swimlane and material-moment-adapter

* updated material and core

* finished migration to angular 10

* migration to angular 11

* finished migration to angular 11

* updated package-lock

* updated to angular 12

* finished migration to angular 12

* updated to angular 13

* finished migration to angular 13

* updated to angular 14

* finished migration to angular 14

* updated to angular 15

* migration to material 15

* added new parameters to charts

* Updated version, dependencies and devDependecies

* ng generate @angular/material:mdc-migration

* updated to eslint

* added inputs to show grid and data label

* [Migration] Removed deprecated @InputConverter (#131)

* Updated version and dependencies

* updated ontimize-web-ngx tgz

* Replaced InputConverter by BooleanInputConverter

* Update karma conf

* fixed chart on demand errors

* added formatting

* updated CHANGELOG and README

* feat: workflow beta version support (#134)

* updated tgz, workflows and chart-on-demand service

* removed code smells

* modified configureParams

* deleted bugs

* Updated ontimize-web-ngx  to 15.0.0-beta.0

* Updated workflows

* Update CHANGELOG.md

* Updated README.md

* Update CHANGELOG.md

* Update package.json

---------

Co-authored-by: Daniel Graña Cousido <daniel.grana@imatia.com>
Co-authored-by: IMATIASL\patricia.martinez 

--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
@@ -95,14 +95,15 @@
     </mat-sidenav>
     <mat-sidenav-content>
       <div class="sidenav-container-content">
-        <div fxLayout="column" id="sidenav-container-content" fxFlex class="title-sidenav-content">
-          <ng-lottie height="95%" class="lottie" [options]="options" *ngIf="showPlaceholder" fxFlex></ng-lottie>
+        <div fxLayout="column" id="sidenav-container-content" fxFlex [ngClass]="chartClass">
+          <!-- <ng-lottie height="95%" class="lottie" [options]="options" *ngIf="showPlaceholder" fxFlex></ng-lottie> -->
           <div fxLayout="column" fxLayoutAlign="start start" *ngIf="!showPlaceholder">
             <h2 class="title">{{currentPreference.title}}</h2>
             <h5 class="subtitle">{{currentPreference.subtitle}}</h5>
           </div>
-          <div fxLayout="row" fxLayoutAlign="start start" fxFlex [style.display]="showPlaceholder ? 'none' : 'inherit'">
-            <o-chart #chart fxFlex type="currentPreference.selectedTypeChart" query-on-bind="no" query-on-init="no" layout-padding class="chart">
+          <div [style.display]="showPlaceholder ? 'none' : 'inherit'">
+            <o-chart #chart fxFlex type="currentPreference.selectedTypeChart" query-on-bind="no" chart-width="700" query-on-init="no" layout-padding
+              class="chart">
             </o-chart>
           </div>
         </div>
