--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart/o-chart.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart/o-chart.component.html
@@ -1,5 +1,33 @@
-<div fxLayout="row" layout-padding fxLayoutAlign="center center">
-    <nvd3 #nvChart fxFlexFill [options]="options" [data]="getAdaptData()" config="{visible: true, extended: true}"
-        (onTap)="tapChart($event)" (onDoubleTap)="doubleTapChart($event)" (onPress)="pressChart($event)" 
-        (onSwipe)="swipeChart($event)" (onRotate)="rotateChart($event)" (onPinch)="pinchChart($event)"></nvd3>
+<div>
+  <ng-container [ngSwitch]="type">
+
+    <ngx-charts-pie-chart #pieChart *ngSwitchCase="'pie'" fxFlexFill class="chart" [results]="getAdaptData()" [labels]="true" [explodeSlices]="false"
+      [doughnut]="false" [scheme]="color" [labelFormatting]="xFormatting" [ngClass]="chartClass"></ngx-charts-pie-chart>
+
+    <ngx-charts-pie-chart #donutChart *ngSwitchCase="'donutChart'" fxFlexFill class="chart" [results]="getAdaptData()" [legend]="false"
+      [labels]="true" [explodeSlices]="false" [doughnut]="true" [ngClass]="chartClass" [scheme]="color"
+      [labelFormatting]="xFormatting"></ngx-charts-pie-chart>
+
+    <ngx-charts-bar-horizontal #horizontalBarChart *ngSwitchCase="'multiBarHorizontalChart'" [showDataLabel]="showDataLabel" [xAxisLabel]="xAxisLabel"
+      [yAxisLabel]="yAxisLabel" [results]="getAdaptData()" [scheme]="color" [xAxisTickFormatting]="xFormatting" [yAxisTickFormatting]="yFormatting"
+      [ngClass]="chartClass"></ngx-charts-bar-horizontal>
+
+    <ngx-charts-bar-vertical #discreteBarChart *ngSwitchCase="'discreteBar'" [showDataLabel]="showDataLabel" [xAxisLabel]="xAxisLabel"
+      [yAxisLabel]="yAxisLabel" [xAxis]="true" [yAxis]="true" [results]="getAdaptData()" [scheme]="color" [xAxisTickFormatting]="xFormatting"
+      [yAxisTickFormatting]="yFormatting" [ngClass]="chartClass"></ngx-charts-bar-vertical>
+
+    <ngx-charts-line-chart #lineChart *ngSwitchCase="'line'" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel" [xAxis]="true" [yAxis]="true"
+      [results]="getAdaptData()" [scheme]="color" [xAxisTickFormatting]="xFormatting" [yAxisTickFormatting]="yFormatting"
+      [showGridLines]="showGridLines" [ngClass]="chartClass"></ngx-charts-line-chart>
+
+    <ngx-charts-area-chart-stacked #stackedAreaChart *ngSwitchCase="'stackedAreaChart'" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel"
+      [xAxis]="true" [yAxis]="true" [results]="getAdaptData()" [scheme]="color" [xAxisTickFormatting]="xFormatting"
+      [yAxisTickFormatting]="yFormatting" [ngClass]="chartClass"></ngx-charts-area-chart-stacked>
+
+    <ngx-charts-bar-vertical-stacked #multiBarChart *ngSwitchCase="'multiBar'" [showDataLabel]="showDataLabel" [xAxisLabel]="xAxisLabel"
+      [yAxisLabel]="yAxisLabel" [xAxis]="true" [yAxis]="true" [results]="getAdaptData()" [scheme]="color" [xAxisTickFormatting]="xFormatting"
+      [yAxisTickFormatting]="yFormatting" [ngClass]="chartClass">
+    </ngx-charts-bar-vertical-stacked>
+
+  </ng-container>
 </div>
