added changes to beta 15

--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -39,11 +39,16 @@
       </mat-card-footer>
     </mat-card>
     <mat-card fxFlex="33">
-      <mat-card-header></mat-card-header>
-      <mat-card-content></mat-card-content>
+      <mat-card-header>Ngx-charts</mat-card-header>
+      <mat-card-content>
+        Ngx-charts is a charting library for Angular, developed by Swimlane. This library specifically integrates
+        with Angular to provide an easy way to create and visualize charts in Angular applications.
+        The ngx-charts library offers a variety of chart types, such as bar charts, line charts, area charts, donut charts, among others. It is designed to be
+        highly customizable and easy to use, allowing developers to create engaging and effective data visualizations with minimal effort.
+      </mat-card-content>
       <mat-card-footer fxLayoutAlign="center flex-end">
-        <a href="http://leafletjs.com/" target="_blank">
-          <o-button type="BASIC" label="" layout-padding color="primary"></o-button>
+        <a href="https://swimlane.gitbook.io/ngx-charts/" target="_blank">
+          <o-button type="BASIC" label="Ngx-charts documentation link" layout-padding color="primary"></o-button>
         </a>
       </mat-card-footer>
     </mat-card>
