--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -1,11 +1,18 @@
-@use 'ontimize-web-ngx/theming/themes/implatform-fashion-default-theme.scss' as theme;
-@use 'ontimize-web-ngx/theming/implatform-fashion-theme.scss' as theme-styles;
-@use 'ontimize-web-ngx/theme.scss' as ontimize-web-ngx-theme;
-@use '../../app/shared/example/example.theme.scss' as example;
+// Define your custom theme or choose predefined theme
+@use 'ontimize-web-ngx/theming/themes/ontimize.scss'as theme;
+@use 'ontimize-web-ngx/theming/ontimize-style.scss';
+@use '../../app/shared/example/example.theme.scss';
 @use '../../app/main/main-theme.scss' as main;
 
-@include ontimize-web-ngx-theme.o-material-theme(theme.$theme, theme-styles.$typography);
-@include theme-styles.implatform-fashion-theme-styles(theme.$theme);
+
+//Include ontimize theme styles
+@include ontimize-style.ontimize-theme-styles(theme.$theme);
+
 @include example.example-component-theme(theme.$theme);
 
 @include main.main-theme(theme.$theme);
+
+//Include dark styles option
+.o-dark {
+  @include ontimize-style.ontimize-theme-all-component-color(theme.$dark-theme);
+}
