--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<o-app-layout show-header="false">
+<o-app-layout show-language-selector="no">
   <o-app-layout-sidenav>
   </o-app-layout-sidenav>
   <router-outlet></router-outlet>
