[Charts] Migration/quickstart 15.0.0 (#129)
* comented unnecesary charts

* updated zone and rxjs

* updated to angular 9

* quickstart working with charts 9.0.0

* updated to angular10

* updated material

* updated to angular 11

* finished migration to angular 11

* updated to angular 12

* finished migration to angular 12

* updated to angular 13

* finished migration to angular 13

* updated to angular 14

* updated ontimize dependencies

* finished migration to angular 14

* updated to angular 15

* updated cdk to 15

* added requiered changes

* removed angular2-highlight

* changes to angular 15

* [Migration quickstart-charts] Remove deprecated @InputConverter (#132)

* Updated version and dependencies

* Replace InputConverter by BooleanInputConverter

* Fixed the primary, accent, warn,..  getting wrong

* Fixed primary, accent and warning getting wrong

* solved console errors

* modified styles and fixed errors

* updated versions

* added changes to beta 15

* Resolving 15.0.0-beta.1 breaking change

* new component switch-mode-theme

* Updated versions

* Updated scripts in package.json

* show-language-selector="no"

---------

Co-authored-by: Patricia Martinez <32088627+patricia-martinez-imatia@users.noreply.github.com>
Co-authored-by: IMATIASL\patricia.martinez <patricia.martinez@imatia.com>

--- a/src/app/main/bar-chart/discrete-bar/discrete-bar.component.html
+++ b/src/app/main/bar-chart/discrete-bar/discrete-bar.component.html
@@ -3,7 +3,7 @@
   <example-comp comp-name="BAR_CHART.DISCRETE_BASIC" comp-desc="BAR_CHART.DISCRETE_BASIC.DESC" [files]="getBasicUsageFiles()"
     layout-fill>
     <o-chart type="discreteBar" x-label="Axis x" y-label="Axis Y" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES"
-      y-axis="MOVEMENT"></o-chart>
+      y-axis="MOVEMENT" [color]="colorScheme"></o-chart>
   </example-comp>
 
   <example-comp comp-name="BAR_CHART.DISCRETE_INSIDE_FORM" comp-desc="BAR_CHART.DISCRETE_INSIDE_FORM.DESC" [files]="getInsideFormFiles()"
@@ -20,13 +20,13 @@
         </o-row>
       </o-row>
       <o-chart type="discreteBar" x-label="Axis x" y-label="Axis Y" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES"
-        y-axis="MOVEMENT" query-on-init="no" query-on-bind="yes" parent-keys="ACCOUNTID"></o-chart>
+        y-axis="MOVEMENT" query-on-init="no" query-on-bind="yes" parent-keys="ACCOUNTID" [color]="colorScheme"></o-chart>
     </o-form>
   </example-comp>
 
   <example-comp comp-name="BAR_CHART.DISCRETE_CUSTOM" comp-desc="BAR_CHART.DISCRETE_CUSTOM.DESC" comp-note="BAR_CHART.DISCRETE_CUSTOM.NOTE" [files]="getCustomDataFiles()"
     layout-fill>
-    <o-chart #discreteBar type="discreteBar" x-label="Axis x" y-label="Axis Y" [data]="data"></o-chart>
+    <o-chart #discreteBar type="discreteBar" x-label="Axis x" y-label="Axis Y" [data]="data" [color]="colorScheme"></o-chart>
   </example-comp>
 
 </div>
