--- a/src/app/shared/example/example.theme.scss
+++ b/src/app/shared/example/example.theme.scss
@@ -1,12 +1,14 @@
+@use '@angular/material'as mat;
+
 @mixin example-component-theme($theme) {
-  $primary: map-get($theme, primary);
-  $accent: map-get($theme, accent);
-  $warn: map-get($theme, warn);
-  $background: map-get($theme, background);
-  $foreground: map-get($theme, foreground);
+  $primary: map-get($theme, color, primary);
+  $accent: map-get($theme, color, accent);
+  $warn: map-get($theme, color, warn);
+  $background: map-get($theme, color, background);
+  $foreground: map-get($theme, color, foreground);
 
   .example-comp {
-    & > section {
+    &>section {
       background: #fafafa;
 
       .playground-toolbar.mat-toolbar {
@@ -22,7 +24,7 @@
       .comp-note {
         p {
           mat-icon {
-            color: mat-color($primary, 0.84);
+            color: mat.get-color-from-palette($primary, 0.84);
           }
         }
       }
