--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -1,20 +1,18 @@
-@import 'node_modules/ontimize-web-ngx-theming/src/themes/ontimize.scss';
+// Define your custom theme or choose predefined theme
+@use 'ontimize-web-ngx/theming/themes/ontimize.scss'as theme;
+@use 'ontimize-web-ngx/theming/ontimize-style.scss';
+@use '../../app/shared/example/example.theme.scss';
+@use '../../app/main/main-theme.scss' as main;
 
-@import 'node_modules/ontimize-web-ngx-theming/ontimize-theme.scss';
-@include ontimize-theme-styles($theme);
 
-// @import 'node_modules/ontimize-web-ngx-theming/ontimize-theme-lite.scss';
-// @include ontimize-theme-styles-lite($theme);
+//Include ontimize theme styles
+@include ontimize-style.ontimize-theme-styles(theme.$theme);
 
-@import 'node_modules/ontimize-web-ngx/theme.scss';
-@include o-material-theme($theme, $default-typography);
+@include example.example-component-theme(theme.$theme);
 
-@import '../../app/shared/example/example.theme.scss';
-@include example-component-theme($theme);
+@include main.main-theme(theme.$theme);
 
-.nvd3 text,
-.nvd3 .title,
-.nvtooltip
- {
-  font-family: Roboto !important;
+//Include dark styles option
+.o-dark {
+  @include ontimize-style.ontimize-theme-all-component-color(theme.$dark-theme);
 }
