--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
@@ -5,6 +5,11 @@
     }
   }
 
+  .sidenav-toggle-button {
+    padding-top: 8px;
+    padding-left: 16px;
+  }
+
   .mat-mdc-dialog-content {
     //height - toolbar-height - padding-top
     max-height: calc(100% - 36px - 16px);
@@ -131,7 +136,9 @@
       overflow: hidden;
 
       .sidenav-container-content {
-        margin-left: 66px;
+        .opened{
+margin-left: 66px;
+        }
         height: 100%;
         border-radius: 4px;
         border: 1px solid #dddddd;
@@ -150,7 +157,6 @@
           height: 100%;
         }
       }
-
     }
 
   }
