--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
@@ -146,8 +146,8 @@
           margin-left: 60px;
         }
 
-        .lottie {
-          height: 100%;
+        .animation {
+          height: 60%;
         }
       }
 
