fixed image bug

--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
@@ -96,7 +96,7 @@
     <mat-sidenav-content>
       <div class="sidenav-container-content">
         <div fxLayout="column" id="sidenav-container-content" fxFlex [ngClass]="chartClass">
-          <img class="animation" src="./assets/chart_animation.svg" />
+          <img class="animation" alt="graph image" src="./assets/chart_animation.svg" />
           <div fxLayout="column" fxLayoutAlign="start start" *ngIf="!showPlaceholder">
             <h2 class="title">{{currentPreference.title}}</h2>
             <h5 class="subtitle">{{currentPreference.subtitle}}</h5>
