--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
@@ -127,9 +127,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      /* Centrar horizontalmente */
       justify-content: center;
-      /* Centrar verticalmente */
     }
 
     .mat-sidenav-content {
@@ -140,6 +138,7 @@
           margin-left: 66px;
         }
 
+        display: inherit !important;
         height: 100%;
         border-radius: 4px;
         border: 1px solid #dddddd;
