--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.html
@@ -28,7 +28,7 @@
   <mat-sidenav-container class="mat-sidenav-container" [class.opened]="opened" fxFill>
     <mat-sidenav #sidenav [(opened)]="opened" mode="side" class="chart-on-demand-sidenav">
       <div fxLayout="column" fxFill>
-        <o-button o-button (click)="opened=!opened" icon="menu" type="ICON" label=""
+        <o-button *ngIf="opened" o-button (click)="opened=!opened" icon="menu" type="ICON" label=""
           [matTooltip]="(sidenav.opened?'CHART_ON_DEMAND.HIDE_FILTERS':'CHART_ON_DEMAND.SHOW_FILTERS') | oChartTranslate">
         </o-button>
         <div fxLayout="column" *ngIf="opened" class="container-title" fxLayoutGap="10px">
@@ -95,6 +95,9 @@
     </mat-sidenav>
     <mat-sidenav-content>
       <div class="sidenav-container-content">
+        <o-button o-button *ngIf="!opened" class="sidenav-toggle-button" (click)="opened=!opened" icon="menu" type="ICON" label=""
+          [matTooltip]="(sidenav.opened?'CHART_ON_DEMAND.HIDE_FILTERS':'CHART_ON_DEMAND.SHOW_FILTERS') | oChartTranslate">
+        </o-button>
         <div fxLayout="column" id="sidenav-container-content" fxFlex [ngClass]="chartClass">
           <img *ngIf="showPlaceholder" class="animation" alt="graph image" src="./assets/chart_animation.svg" />
           <div fxLayout="column" fxLayoutAlign="start start" *ngIf="!showPlaceholder">
