modified styles and example codes

--- a/src/app/main/area-chart/radar/radar.component.html
+++ b/src/app/main/area-chart/radar/radar.component.html
@@ -1,4 +1,4 @@
-<!-- <div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" class="bg-level-1 main-container">
 
   <example-comp comp-name="AREA_CHAR.RADAR_BASIC" comp-desc="AREA_CHAR.RADAR_BASIC.DESC" [files]="getBasicFiles()">
     <o-chart type="radarChart" chart-height="400" entity="EDimensionData" [chart-parameters]="chartConf2"></o-chart>
