--- a/src/app/main/bar-chart/bullet/bullet.component.html
+++ b/src/app/main/bar-chart/bullet/bullet.component.html
@@ -1,4 +1,4 @@
-<!-- <div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" class="bg-level-1 main-container">
   <example-comp comp-name="BAR_CHAR.BULLET_BASIC" comp-desc="BAR_CHAR.BULLET_BASIC.DESC" [files]="getBasicFiles()">
     <o-chart type="bulletChart" chart-height="200" entity="EBullet" [chart-parameters]='chartParameters2'></o-chart>
   </example-comp>
