--- a/src/app/main/bar-chart/discrete-bar/discrete-bar.component.html
+++ b/src/app/main/bar-chart/discrete-bar/discrete-bar.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center top">
+<div fxLayout="column" class="bg-level-1 main-container">
 
   <example-comp comp-name="BAR_CHART.DISCRETE_BASIC" comp-desc="BAR_CHART.DISCRETE_BASIC.DESC" [files]="getBasicUsageFiles()"
     layout-fill>
