--- a/src/app/main/bubble-chart/bubble/bubble.component.html
+++ b/src/app/main/bubble-chart/bubble/bubble.component.html
@@ -1,4 +1,4 @@
-<!-- <div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" class="bg-level-1 main-container">
   <example-comp comp-name="BUBBLE_CHART.BUBBLE_CHART" comp-desc="BUBBLE_CHART.BUBBLE_CHART.DESC" [files]="getFiles()">
     <o-chart #bubbleChart type="bubbleChart" chart-height="400"></o-chart>
   </example-comp>
