--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,27 +1,26 @@
 <o-column title="INTRODUCTION" class="bg-level-1" fxFlexFill>
-
   <div fxLayout="row">
-    <div fxLayout="column" fxFlex="55" layout-padding>
-      <h2>What is Ontimize Web Charts?</h2>
+  <div layout-padding fxFlex="60">
+      <h3>What is Ontimize Web Charts?</h3>
       <p class="body-text">
         Ontimize Web Charts is a module that allows to you to integrate charts into an Ontimize Web application.
       </p>
       <p class="body-text">
         Ontimize Web Charts is based on d3 libraries.
       </p>
-      <h2>Keep up to date</h2>
+      <h3>Keep up to date</h3>
       <p class="body-text">
         Please refer to our changelog for up-to-date listings of all improvements and breaking changes.
       </p>
       <a href="https://github.com/OntimizeWeb/ontimize-web-ngx-charts/blob/master/CHANGELOG.md" target="_blank">
         <o-button type="STROKED" label="CHANGELOG" layout-padding color="primary" icon="access_time"></o-button>
       </a>
-      <h2>Related topics</h2>
+      <h3>Related topics</h3>
       <p class="body-text">
         Here are some interesting reading topics that can help you better understand how to develop with Ontimize Web.
       </p>
     </div>
-    <div layout-padding fxFlex="45" fxLayoutAlign="center center">
+    <div layout-padding fxFlex="40" fxLayoutAlign="center center">
       <img src="./assets/images/home_light.svg">
     </div>
   </div>
