--- a/src/app/main/line-chart/parallel-coordinates/parallel-coordinates.component.html
+++ b/src/app/main/line-chart/parallel-coordinates/parallel-coordinates.component.html
@@ -1,4 +1,4 @@
-<!-- <div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" class="bg-level-1 main-container">
 
   <example-comp comp-name="LINE_CHART.PARALLEL_COORDINATES_BASIC" comp-desc="LINE_CHART.PARALLEL_COORDINATES_BASIC.DESC" [files]="getBasicFiles()">
     <o-chart type="parallelCoordinatesChart" chart-height="350" entity="EDimensionData" [chart-parameters]="chartConf2"></o-chart>
