--- a/src/app/main/other-charts/candlestick/candlestick.component.html
+++ b/src/app/main/other-charts/candlestick/candlestick.component.html
@@ -1,4 +1,4 @@
-<!-- <div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" class="bg-level-1 main-container">
   <example-comp comp-name="OTHER_CHARTS.CANDLESTICK_BASIC" comp-desc="OTHER_CHARTS.CANDLESTICK_BASIC.DESC" [files]="getBasicUsageFiles()">
     <o-chart #candlestickbasic  type="candlestickBarChart" chart-height="600" x-data-type="time" [chart-parameters]="chartParameters"
       entity="EStockExchange"></o-chart>
