--- a/src/app/main/area-chart/stacked-area/stacked-area.component.html
+++ b/src/app/main/area-chart/stacked-area/stacked-area.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center top">
+<div fxLayout="column" class="bg-level-1 main-container">
   <example-comp comp-name="AREA_CHAR.STACKED" comp-desc="AREA_CHAR.STACKED.DESC" [files]="getFiles()" layout-fill>
     <o-chart #stackedAreaChart type="stackedAreaChart" x-label="Time" y-label="Amount (€)" entity="EMovementPercent" x-axis="DATE_"
       y-axis="MOVEMENT;AVERAGE;BALANCE" x-data-type="time" [color]="colorScheme"></o-chart>
