--- a/src/app/main/bar-chart/multi-bar/multi-bar.component.html
+++ b/src/app/main/bar-chart/multi-bar/multi-bar.component.html
@@ -1,12 +1,12 @@
-<div fxLayout="column" fxLayoutAlign="center top">
-    <example-comp comp-name="BAR_CHAR.MULTIBAR_BASIC" comp-desc="BAR_CHAR.MULTIBAR_BASIC.DESC" comp-note="BAR_CHAR.MULTIBAR_BASIC.NOTE"
-        [files]="getBasicUsageFiles()" layout-fill>
-        <o-chart type="multiBar" x-label="Time" y-label="Amount (€)" entity="EMovementsGrouped" x-axis="DATE_" y-axis="MOVEMENT;AVERAGE;BALANCE"
-            x-data-type="time" [chart-parameters]="chartParameters1" [color]="colorScheme"></o-chart>
-    </example-comp>
+<div fxLayout="column" class="bg-level-1 main-container">
+  <example-comp comp-name="BAR_CHAR.MULTIBAR_BASIC" comp-desc="BAR_CHAR.MULTIBAR_BASIC.DESC" comp-note="BAR_CHAR.MULTIBAR_BASIC.NOTE"
+    [files]="getBasicUsageFiles()" layout-fill>
+    <o-chart type="multiBar" x-label="Time" y-label="Amount (€)" entity="EMovementsGrouped" x-axis="DATE_" y-axis="MOVEMENT;AVERAGE;BALANCE"
+      x-data-type="time" [color]="colorScheme"></o-chart>
+  </example-comp>
 
-     <example-comp comp-name="BAR_CHAR.MULTIBAR_CUSTOM_SERIES" comp-desc="BAR_CHAR.MULTIBAR_CUSTOM_SERIES.DESC"
-        comp-note="BAR_CHAR.MULTIBAR_CUSTOM_SERIES.NOTE" [files]="getCustomDataFiles()" layout-fill>
-        <o-chart #multiBar type="multiBar" x-label="Time" y-label="Amount (€)" [data]="data2" [color]="colorScheme" x-data-type="time" [chart-parameters]="chartParameters2"></o-chart>
-    </example-comp>
+  <example-comp comp-name="BAR_CHAR.MULTIBAR_CUSTOM_SERIES" comp-desc="BAR_CHAR.MULTIBAR_CUSTOM_SERIES.DESC"
+    comp-note="BAR_CHAR.MULTIBAR_CUSTOM_SERIES.NOTE" [files]="getCustomDataFiles()" layout-fill>
+    <o-chart #multiBar type="multiBar" x-label="Time" y-label="Amount (€)" [data]="data2" [color]="colorScheme" x-data-type="time"></o-chart>
+  </example-comp>
 </div>
