--- a/src/app/main/line-chart/line/line.component.html
+++ b/src/app/main/line-chart/line/line.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center top">
+<div fxLayout="column" class="bg-level-1 main-container">
   <example-comp comp-name="LINE_CHART.LINE_BASIC" comp-desc="LINE_CHART.LINE_BASIC.DESC" [files]="getBasicUsageFiles()" layout-fill>
     <o-chart type="line" x-label="Time" y-label="Amount (€)" entity="EMovements" x-axis="DATE_" y-axis="MOVEMENT" x-data-type="time"
       [color]="colorScheme"></o-chart>
