--- a/src/app/main/line-chart/lineplusbar/lineplusbar.component.html
+++ b/src/app/main/line-chart/lineplusbar/lineplusbar.component.html
@@ -1,4 +1,4 @@
-<!-- <div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" class="bg-level-1 main-container">
 
   <example-comp comp-name="LINE_CHART.LINE_PLUS_LINE_BASIC" comp-desc="LINE_CHART.LINE_PLUS_LINE_BASIC.DESC" [files]="getBasicUsageFiles()">
     <o-chart type="linePlusBarWithFocusChart" entity="EMovementsGrouped" x-axis="DATE_" y-axis="MOVEMENT;BALANCE"
