--- a/src/app/main/line-chart/ohlc/ohlc.component.html
+++ b/src/app/main/line-chart/ohlc/ohlc.component.html
@@ -1,4 +1,4 @@
-<!-- <div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" class="bg-level-1 main-container">
   <example-comp comp-name="LINE_CHART.OHLC_BASIC" comp-desc="LINE_CHART.OHLC_BASIC.DESC" [files]="getBasicUsageFiles()">
     <o-chart #ohlc type="ohlcBarChart" chart-height="600" x-data-type="time" [chart-parameters]="chartParameters"
       entity="EStockExchange"></o-chart>
