--- a/src/app/main/main-theme.scss
+++ b/src/app/main/main-theme.scss
@@ -1,15 +1,22 @@
-@use '@angular/material'as mat;
+@use '@angular/material' as mat;
 
 @mixin main-theme($theme) {
   $primary: map-get($theme, color, primary);
   $accent: map-get($theme, color, accent);
   $warn: map-get($theme, color, warn);
+  $typography: map-get($theme, typography);
   $background: map-get($theme, color, background);
   $foreground: map-get($theme, color, foreground);
 
-  .active {
+
+  .active,
+  .active.mdc-button {
     border-color: mat.get-color-from-palette($primary, 500);
     background-color: mat.get-color-from-palette($primary, 100);
+  }
+
+  .mat-mdc-card-content {
+    font-size: mat.font-size($typography, body-2);
   }
 
   layout-manager {
