--- a/src/app/main/other-charts/directed-graph/directed-graph.component.html
+++ b/src/app/main/other-charts/directed-graph/directed-graph.component.html
@@ -1,4 +1,4 @@
-<!-- <div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" class="bg-level-1 main-container">
   <example-comp #example comp-name="OTHER_CHARTS.FORCE_DIRECT" comp-desc="OTHER_CHARTS.FORCE_DIRECT.DESC" [files]="getBasicUsageFiles()">
     <o-chart #directedGraph type="forceDirectedGraph" chart-height="450"  [chart-parameters]="chartParameters">
     </o-chart>
