--- a/src/app/main/other-charts/donut/donut.component.html
+++ b/src/app/main/other-charts/donut/donut.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayoutAlign="center top">
+<div fxLayout="row" class="bg-level-1 main-container">
 
   <example-comp comp-name="OTHER_CHARTS.DONUT_BASIC" comp-desc="OTHER_CHARTS.DONUT_BASIC.DESC" [files]="getBasicUsageFiles()" fxFlex="50">
     <o-chart type="donutChart" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES" y-axis="MOVEMENT" chart-height="400" [chart-parameters]="chartParameters1" [color]="colorScheme"></o-chart>
