--- a/src/app/shared/example/example.component.scss
+++ b/src/app/shared/example/example.component.scss
@@ -1,15 +1,31 @@
 .example-comp {
-  & > section {
+  &>section {
     margin: 12px;
+
+    .mat-toolbar {
+      padding: 0;
+    }
   }
 
-  .playground-toolbar {
-    .comp-description {
-      font-size: .8em;
-      line-height: 1em;
-    }
+  .comp-title {
+    font-size: 18px;
+    font-weight: 600;
+  }
 
-    
+  .playground-toolbar.mat-toolbar {
+    margin-bottom: 12px;
+  }
+
+  .playground-toolbar.mat-toolbar-single-row {
+    height: 100%;
+    min-height: 64px;
+    max-height: 64px;
+    white-space: initial;
+
+    .comp-description {
+      font-size: 16px;
+      font-weight: 100;
+    }
   }
 
   .comp-note {
@@ -42,10 +58,11 @@
 
   .o-form form.inner-form {
     position: relative;
+    padding-top: 8px;
   }
 
-  .mat-tab-body-wrapper {
+  .mat-mdc-tab-body-wrapper {
     height: 100%;
+    padding: 8px
   }
-
 }
