--- a/src/app/shared/highlight/highlight.component.html
+++ b/src/app/shared/highlight/highlight.component.html
@@ -1,10 +1,9 @@
-<section hljsContent=".highlight" fxFill>
+<section fxFill>
   <pre class="snippet" fxFill>
-    <button mat-icon-button id="copy-btn" class="copy-btn"  (cdkCopyToClipboardCopied)="showTooltip()">
+    <button mat-icon-button id="copy-btn" class="copy-btn" [cdkCopyToClipboard]="templateContent" (cdkCopyToClipboardCopied)="showTooltip()">
       <mat-icon aria-label="Copy to clipboard">file_copy</mat-icon>
     </button>
-    <code id="code" class="highlight">
-
+    <code id="code" [highlight]="templateContent" [languages]="templateTypeArray" [lineNumbers]="true">
     </code>
   </pre>
 </section>
