--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
-.application-layout-content-wrapper {
-  padding: 0 !important;
+
+
+body {
+  font-size: 14px;
+}
+
+.main-container {
+  width: 100%;
+  height: 100%;
+  max-height: max-content;
+  overflow: auto;
 }
